archive/okteto/kic-okteto/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-kong
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/strip-path: "true"
    konghq.com/preserve-host: "false"
    konghq.com/protocols: "http"
    dev.okteto.com/generate-host: "true"
spec:
  rules:
  - http:
      paths:
      - path: /who
        pathType: Prefix
        backend:
          service:
            name: whoami
            port: 
              number: 80
